@@ -10,6 +10,7 @@
 ### Update
 - UPDATE - Add Texture Settings to Custom Data panel colors
 - UPDATE - Season 3 Boss IDs
+- UPDATE - Removed Season 2 Teleports from Seasons list
 ### NEW
 - NEW - Customization for Nameplate Quest icons
 
